--- a/index.html
+++ b/index.html
@@ -2,10 +2,21 @@
 <html lang="en">
   <head>
     <meta charset="utf-8">
-    <title>project-tuvalum</title>
+    <title>Project Tuvalum</title>
+    <link rel="stylesheet" href="public/vendors/bootstrap/dist/css/bootstrap.min.css">
+    <link rel="stylesheet" href="/css/style.css">
   </head>
   <body>
+    <header>
+      <h1>Proyecto Tuvalum</h1>
+      <nav class="nav">
+          <a class="link1 nav-link"href="/cascos.html">CASCOS</a>
+          <a class="link2 nav-link"href="/bicicletas.html">BICICLETAS</a>
+        </nav>
+     
+
+    </header>
     <div id="app"></div>
-    <script src="/dist/build.js"></script>
+    <!-- <script src="/dist/build.js"></script> -->
   </body>
 </html>
