retocando vista de enviar email y hacer campos obligatorios

--- a/index.html
+++ b/index.html
@@ -5,6 +5,12 @@
   <meta charset="utf-8">
   <title>Project Tuvalum</title>
   <link rel="stylesheet" href="public/vendors/bootstrap/dist/css/bootstrap.min.css">
+  <!-- <script type="text/javascript" src="https://cdn.emailjs.com/sdk/2.2.4/email.min.js"></script>
+  <script type="text/javascript">
+   (function(){
+      emailjs.init("user_ZQ18rSFkZNAwUPRKaUBVv");
+   })();
+</script> -->
 </head>
 
 <body>
